compiler/testData/diagnostics/tests/resolve/localObject.kt
fun foo(): Any {
    <!LOCAL_OBJECT_NOT_ALLOWED!>object Bar<!>
    return Bar
}